--- a/tipovacka-app/ngsw-config.json
+++ b/tipovacka-app/ngsw-config.json
@@ -26,5 +26,18 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "api-performance",
+      "urls": [
+        "**/public/teams"
+      ],
+      "cacheConfig": {
+        "maxSize": 100,
+        "maxAge": "30d",
+        "strategy": "performance"
+      }
+    }
   ]
 }
