--- a/tipovacka-app/package.json
+++ b/tipovacka-app/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "^17.0.5",
     "@angular/service-worker": "^17.0.5",
     "@ngneat/dialog": "^5.0.0",
+    "@ngneat/hot-toast": "^6.0.2",
+    "@ngneat/overview": "5.1.1",
     "@ngneat/transloco": "^6.0.0",
     "ramda": "^0.29.1",
     "rxjs": "~7.8.0",
