--- a/.github/workflows/merge-into-main.yml
+++ b/.github/workflows/merge-into-main.yml
@@ -16,17 +16,18 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18' # Set this to your Node.js version
+          node-version: '14' # Set this to your Node.js version
+          cache: 'yarn'  # Enable Yarn caching
 
       - name: Install Angular CLI
-        run: npm install -g @angular/cli
+        run: yarn global add @angular/cli
 
       - name: Install Dependencies
-        run: npm install
+        run: yarn install
         working-directory: ./tipovacka-app
 
       - name: Build Angular App
-        run: ng build --prod
+        run: yarn ng build --prod
         working-directory: ./tipovacka-app
 
       - name: Upload to FTP
