--- a/.github/workflows/merge-into-main.yml
+++ b/.github/workflows/merge-into-main.yml
@@ -30,7 +30,7 @@ jobs:
         run: yarn install
 
       - name: Build Angular App
-        run: yarn ng build --prod
+        run: yarn ng build
 
       - name: Upload to FTP
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
