github actions setup

--- a/.github/workflows/merge-into-main.yml
+++ b/.github/workflows/merge-into-main.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Upload to FTP
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
-          ftp-server: http://336374.w74.wedos.net/
-          ftp-username: w336374
-          ftp-password: nrvRUPG3
+          server: http://336374.w74.wedos.net/
+          username: w336374
+          password: nrvRUPG3
           local-dir: ./tipovacka-app/dist/ # Adjust if your build output path is different
-          remote-dir: /subdom/football/
+          server-dir: /subdom/football/
