--- a/.github/workflows/merge-into-main.yml
+++ b/.github/workflows/merge-into-main.yml
@@ -39,4 +39,4 @@ jobs:
           username: w336374
           password: nrvRUPG3
           local-dir: ./tipovacka-app/dist/ # Adjust if your build output path is different
-          server-dir: /subdom/football/
+          server-dir: /www/subdom/football/
