--- a/tipovacka-app/package.json
+++ b/tipovacka-app/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "eslint ."
   },
   "private": true,
   "dependencies": {
@@ -24,6 +25,7 @@
     "@ngneat/hot-toast": "^6.0.2",
     "@ngneat/overview": "5.1.1",
     "@ngneat/transloco": "^6.0.0",
+    "eslint": "^8.56.0",
     "ramda": "^0.29.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -35,6 +37,8 @@
     "@angular/compiler-cli": "^17.0.5",
     "@types/jasmine": "~4.3.0",
     "@types/ramda": "^0.29.9",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "autoprefixer": "^10.4.16",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
