--- a/.github/workflows/merge-into-main.yml
+++ b/.github/workflows/merge-into-main.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Install Dependencies
         run: yarn install
 
+      - name: Run ESLint
+        run: yarn lint
+
       - name: Build Angular App
         run: yarn ng build
 
